feat: allow user to choose whether they want slash command to be enabled or not

--- a/.env_example
+++ b/.env_example
@@ -46,6 +46,11 @@ DEV_GUILD=[""]
 # Default: production
 NODE_ENV=""
 
+# Do you want to enable slash command support?
+# Example: ENABLE_SLASH_COMMAND="yes"
+# Default: yes
+ENABLE_SLASH_COMMAND=""
+
 # Which music selection type do you want to use?
 # Example: MUSIC_SELECTION_TYPE="selectmenu"
 # Available: message (just like in previous version) or selectmenu (uses discord selection menu)
