--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
-name: Bug report
+name: Bug Report
 title: "[Bug Report]"
-description: Create a report to help us improve
+description: Create a report to help us improve the project
 labels: [bug]
 
 body:
