--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Discord server
+  - name: Discord Server
     url: https://zhycorp.net/discord
-    about: Visit our discord server for easier and faster respond.
+    about: Visit our Discord server for easier and faster respond.
