--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ffmpeg-static": "^4.4.0",
     "got": "^11.8.2",
     "i18n": "0.13.3",
+    "libsodium-wrappers": "^0.7.9",
     "soundcloud.ts": "^0.4.1",
     "spotify-url-info": "^2.2.3",
     "tslib": "^2.3.1",
