chore(*): Grammar Improvements (#591)
* chore(env): grammar fixes

* chore(readme): grammar fixes

* chore(lang/en): grammar fixes

* chore(heroku): grammar fixes

* chore(lang/en): grammar fixes

* chore(lang/en): grammar fixes

--- a/.env_example
+++ b/.env_example
@@ -62,7 +62,7 @@ MUSIC_SELECTION_TYPE=""
 # Default: no
 ENABLE_24_7_COMMAND=""
 
-# Do you want to make your bot not to leave the voice channel after playing a song?
+# Do you want to make your bot not leave the voice channel after playing a song?
 # Example: STAY_IN_VC_AFTER_FINISHED="no"
 # Default: no
 STAY_IN_VC_AFTER_FINISHED=""
@@ -77,12 +77,12 @@ DJ_ROLE_NAME=""
 # Default: Muted
 MUTE_ROLE_NAME=""
 
-# What is your bot's emoji for every success sentences?
+# What is your bot's emoji for every success sentence?
 # Example: YES_EMOJI="✅"
 # Default: ✅
 YES_EMOJI=""
 
-# What is your bot's emoji for every failed sentences?
+# What is your bot's emoji for every failed sentence?
 # Example: NO_EMOJI="❌"
 # Default: ❌
 NO_EMOJI=""
