--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,8 +46,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           check-latest: true
         
+      - name: Install typescript
+        run: npm i --save-dev typescript
+
+      - name: Delete node modules folder
+        run: rm -rf node_modules
+
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Test compile
-        run: npm run compile && rm -rf dist
+        run: npm run tscompile && rm -rf dist
