--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run lint && npm run compile",
-    "compile": "tsc --build tsconfig.json",
+    "compile": "npx sucrase src -d dist --transforms typescript,imports",
+    "tscompile": "tsc --build tsconfig.json",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "start": "node .",
-    "start:dev": "ts-node -r dotenv/config src/bot.ts"
+    "start": "node ."
   },
   "eslintConfig": {
     "parserOptions": {
@@ -24,32 +24,26 @@
   "dependencies": {
     "@discordjs/opus": "^0.6.0",
     "@discordjs/voice": "^0.7.2",
-    "cli-table": "^0.3.6",
+    "@types/i18n": "^0.13.1",
+    "@types/node": "^16.11.6",
     "date-fns": "^2.23.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "entities": "^3.0.1",
-    "ffmpeg-static": "^4.4.0",
     "got": "^11.8.2",
     "i18n": "0.13.3",
-    "libsodium-wrappers": "^0.7.9",
     "soundcloud.ts": "^0.4.1",
     "spotify-url-info": "^2.2.3",
+    "sucrase": "^3.20.3",
     "tslib": "^2.3.1",
-    "winston": "^3.3.3",
+    "tweetnacl": "^1.0.3",
     "youtube-dl-exec": "^1.2.6",
     "youtubei": "^0.0.1-rc.23"
   },
   "devDependencies": {
-    "@types/cli-table": "^0.3.0",
-    "@types/i18n": "^0.13.1",
-    "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@zhycorp/eslint-config": "^6.0.2",
-    "eslint": "^8.0.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "eslint": "^8.0.1"
   },
   "engines": {
     "node": ">=16.6.0"
