chore(deps): change @discordjs/opus to opusscript

--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "extends": "@zhycorp/eslint-config/typescript"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.6.0",
     "@discordjs/voice": "^0.7.2",
     "@types/i18n": "^0.13.1",
     "@types/node": "^16.11.6",
     "date-fns": "^2.23.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "ffmpeg-static": "^4.4.0",
     "got": "^11.8.2",
     "i18n": "0.13.3",
     "soundcloud.ts": "^0.4.1",
