--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ffmpeg-static": "^4.4.0",
     "got": "^11.8.2",
     "i18n": "0.13.3",
+    "opusscript": "^0.0.8",
     "soundcloud.ts": "^0.4.1",
     "spotify-url-info": "^2.2.3",
     "sucrase": "^3.20.3",
