chore(env): update notes grammaring (#604)
* chore(env): update notes grammaring

* chore(heroku): update string content

* chore(env): update notes grammaring

* chore(env): apply suggestion

* chore(env): apply suggestion

Co-authored-by: mzrtamp <mozartrafi@zhycorp.net>

--- a/.env_example
+++ b/.env_example
@@ -4,17 +4,17 @@
 # Example: DISCORD_TOKEN="NTE5NjQ2MjIxNTU2Nzc2OTcw.XAcEQQ.0gjhNbGeWBsKP6FVuIyZWlG2cMd"
 DISCORD_TOKEN=""
 
-# What is the prefix of your bot?
+# What should be the prefix of your bot?
 # Example: PREFIX="!"
 # Default: !
 PREFIX=""
 
-# What is your bot's embed color code? (hex)
+# What should be your bot's embed color code? (hex)
 # Example: EMBED_COLOR="3CAAFF"
 # Default: 3CAAFF
 EMBED_COLOR=""
 
-# What is the language of your bot?
+# What should be the language of your bot?
 # Example: LOCALE="en"
 # Available: en, es, id
 # Default: en
@@ -23,7 +23,7 @@ LOCALE=""
 # Activity list
 # Example: '["Hello!"]'
 # Formats: {prefix} = bot prefix, {userCount} = user amount, {textChannelsCount} = text channel amount, {serverCount} = server amount, {playingCount} = amount of server playing music using the bot, {username} = bot username
-ACTIVITIES='["My default prefix is {prefix}", "music with {userCount} users", "{textChannelsCount} of text channels in {serverCount} guilds", "Hello there, my name is {username}"]'
+ACTIVITIES='["My default prefix is {prefix}", "music with {userCount} users", "{textChannelsCount} text channels in {serverCount} guilds", "Hello there, my name is {username}"]'
 
 # Activity type list.
 # The order of this value is the same order as ACTIVITIES.
@@ -77,12 +77,12 @@ DJ_ROLE_NAME=""
 # Default: Muted
 MUTE_ROLE_NAME=""
 
-# What is your bot's emoji for every success sentence?
+# What should be your bot's emoji for every success sentence?
 # Example: YES_EMOJI="✅"
 # Default: ✅
 YES_EMOJI=""
 
-# What is your bot's emoji for every failed sentence?
+# What should be your bot's emoji for every failed sentence?
 # Example: NO_EMOJI="❌"
 # Default: ❌
 NO_EMOJI=""
