--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "disc-11",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "description": "A dedicated open-source Discord bot for Zhycorp based from our Discord bot template with more features. Easy to use, and with no coding required.",
   "repository": "https://github.com/zhycorp/disc-11",
@@ -22,15 +22,14 @@
     "extends": "@zhycorp/eslint-config/typescript"
   },
   "dependencies": {
-    "@discordjs/voice": "^0.7.3",
-    "@types/i18n": "^0.13.1",
-    "@types/node": "^16.11.7",
+    "@discordjs/voice": "^0.7.5",
     "date-fns": "^2.23.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "got": "^11.8.2",
     "i18n": "0.13.3",
     "opusscript": "^0.0.8",
+    "prism-media": "^1.3.2",
     "soundcloud.ts": "^0.4.1",
     "spotify-url-info": "^2.2.3",
     "sucrase": "^3.20.3",
@@ -40,6 +39,8 @@
     "youtubei": "^0.0.1-rc.23"
   },
   "devDependencies": {
+    "@types/i18n": "^0.13.1",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "@zhycorp/eslint-config": "^6.0.2",
