--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "disc-11",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "private": true,
   "description": "A dedicated open-source Discord bot for Zhycorp based from our Discord bot template with more features. Easy to use, and with no coding required.",
   "repository": "https://github.com/zhycorp/disc-11",
@@ -23,28 +23,28 @@
   },
   "dependencies": {
     "@discordjs/voice": "^0.7.5",
-    "date-fns": "^2.27.0",
-    "discord.js": "^13.1.0",
+    "date-fns": "^2.28.0",
+    "discord.js": "^13.5.0",
     "dotenv": "^10.0.0",
     "got": "^11.8.3",
-    "i18n": "0.13.3",
+    "i18n": "0.13.4",
     "opusscript": "^0.0.8",
     "prism-media": "^1.3.2",
     "soundcloud.ts": "^0.4.1",
-    "spotify-url-info": "^2.2.3",
     "sucrase": "^3.20.3",
     "tslib": "^2.3.1",
     "tweetnacl": "^1.0.3",
-    "youtube-dl-exec": "^2.0.0",
+    "youtube-dl-exec": "^2.0.2",
     "youtubei": "^0.0.1-rc.23"
   },
   "devDependencies": {
-    "@types/i18n": "^0.13.1",
-    "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@types/i18n": "^0.13.2",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@zhycorp/eslint-config": "^6.0.2",
-    "eslint": "^8.4.1"
+    "eslint": "^8.5.0",
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": ">=16.6.0"
