chore(config): re-apply string infusion to make it consistent for all entire projects

--- a/.env_example
+++ b/.env_example
@@ -40,8 +40,8 @@ LOCALE=""
 #==============================================================================
 # OPTIONAL, MULTIPLE - Activity list, what text should be appear on your bot's status?
 # Example: ACTIVITIES="Hello!"
-# Formats: {prefix} = bot prefix, {userCount} = user amount, {textChannelsCount} = text channel amount, {serverCount} = server amount, {playingCount} = amount of server playing music using the bot, {username} = bot username
-ACTIVITIES="My default prefix is {prefix}, music with {userCount} users, {textChannelsCount} text channels in {serverCount} guilds, 'Hello there, my name is {username}'"
+# Formats: {prefix} = bot prefix, {userCount} = user amount, {textChannelCount} = text channel amount, {serverCount} = server amount, {playingCount} = amount of server playing music using the bot, {username} = bot username
+ACTIVITIES="My default prefix is {prefix}, music with {userCount} users, {textChannelCount} text channels in {serverCount} guilds, 'Hello there, my name is {username}'"
 
 #==============================================================================
 # OPTIONAL, MULTIPLE - Activity type list.
