--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"dotenv": "16.0.3",
 		"got": "12.5.2",
 		"i18n": "0.15.1",
+		"libsodium-wrappers": "^0.7.10",
 		"opusscript": "0.0.8",
 		"prism-media": "1.3.4",
 		"soundcloud.ts": "0.4.9",
