--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"printWidth": 120
 	},
 	"dependencies": {
-		"@discordjs/voice": "0.13.0",
+		"@discordjs/voice": "^0.11.0",
 		"@swc/cli": "0.1.57",
 		"@swc/core": "1.3.9",
 		"date-fns": "2.29.3",
@@ -61,7 +61,6 @@
 		"dotenv": "16.0.3",
 		"got": "12.5.2",
 		"i18n": "0.15.1",
-		"libsodium-wrappers": "^0.7.10",
 		"opusscript": "0.0.8",
 		"prism-media": "1.3.4",
 		"soundcloud.ts": "0.4.9",
