chore(tsconfig): set `rootDir` to `src`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "moduleResolution": "node",
         "lib": ["ES2021"],
         "strict": true,
+        "rootDir": "src",
         "outDir": "dist",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
