chore(lang): Grammar Fixes/Improvements (#1071)
* Update README.md

* Update DISCLAIMERS.md

* Update .env_example

* Propose changes

Co-authored-by: mzrtamp <mozartrafikt@gmail.com>

--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,10 @@
-# This is your bot's configuration file, control your bot's environment here. Every value must contains a string ("")
+# This is your bot's configuration file, control your bot's environment here. Every value must contain a string ("")
 # Note: if you're looking for the dev options, please go to the dev.env file
 
 #==============================================================================
 # OPTIONAL = This value is optional, and can be left blank.
 # IMPORTANT = It is recommended that you pay attention to the value.
-# MULTIPLE - This value can be multiple string, each value splitted with comma or semi-colon. You can use single-quote (') to escape whether you have any comma or semicolon in the value.
+# MULTIPLE - This value can be multiple strings, each value split with a comma or semi-colon. You can use single-quote (') to escape whether you have any comma or semicolon in the value.
 
 #==============================================================================
 # IMPORTANT - What is your Discord bot's token?
@@ -38,15 +38,15 @@ EMBED_COLOR=""
 LOCALE=""
 
 #==============================================================================
-# OPTIONAL, MULTIPLE - Activity list, what text should be appear on your bot's status?
+# OPTIONAL, MULTIPLE - Activity list, what text should appear on your bot's status?
 # Example: ACTIVITIES="Hello!"
 # Formats: {prefix} = bot prefix, {userCount} = user amount, {textChannelCount} = text channel amount, {serverCount} = server amount, {playingCount} = amount of server playing music using the bot, {username} = bot username
 ACTIVITIES="My default prefix is {prefix}, music with {userCount} users, {textChannelCount} text channels in {serverCount} guilds, 'Hello there, my name is {username}'"
 
 #==============================================================================
 # OPTIONAL, MULTIPLE - Activity type list.
-# The order of this value is the same order as ACTIVITIES.
-# For example, first value of ACTIVITIES will use first value of this.
+# The order of this value is the same as ACTIVITIES.
+# For example, the first value of ACTIVITIES will use the first value of this.
 # Example: ACTIVITY_TYPES="PLAYING, COMPETING"
 # Available: PLAYING, WATCHING, LISTENING, COMPETING
 ACTIVITY_TYPES="PLAYING, LISTENING, WATCHING, PLAYING, COMPETING"
@@ -73,7 +73,7 @@ ENABLE_SLASH_COMMAND=""
 #==============================================================================
 # OPTIONAL - Which music selection type do you want to use?
 # Example: MUSIC_SELECTION_TYPE="selectmenu"
-# Available: message (just like in previous version), selectmenu (uses discord selection menu)
+# Available: message (just like in the previous version), selectmenu (uses discord selection menu)
 # Default: message
 MUSIC_SELECTION_TYPE=""
 
@@ -84,7 +84,7 @@ MUSIC_SELECTION_TYPE=""
 ENABLE_24_7_COMMAND=""
 
 #==============================================================================
-# IMPORTANT - Do you want to make your bot not leaving the voice channel after playing a song?
+# IMPORTANT - Do you want to make your bot not leave the voice channel after playing a song?
 # Example: STAY_IN_VC_AFTER_FINISHED="no"
 # Default: no
 STAY_IN_VC_AFTER_FINISHED=""
@@ -100,3 +100,4 @@ YES_EMOJI=""
 # Example: NO_EMOJI="❌"
 # Default: ❌
 NO_EMOJI=""
+
