chore: update support link and do better exampling for the issue title

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 patreon: clytage
-custom: ["https://paypal.me/clytage", "https://karyakarsa.com/clytage"]
+custom: ["https://paypal.me/clytage", "https://sociabuzz.com/clytage/tribe"]
