--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-title: "[Features] <title>"
+title: "[Features] Title"
 description: Suggest an idea for this project
 labels: []
 
