--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-title: "[Bug Report]"
+title: "[Bug Report] Title"
 description: Create a report to help us improve the project
 labels: [bug]
 
