chore: auto add enhancement label for the feature request issue

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 name: Feature Request
 title: "[Features] Title"
 description: Suggest an idea for this project
-labels: []
+labels: [enhancement]
 
 body:
   - type: textarea
